--- a/WebApplication9/Views/Home/Find.cshtml
+++ b/WebApplication9/Views/Home/Find.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication9.Models.Man>
+﻿@model IEnumerable<WebApplication9.Models.Deceased>
 @{
     Layout = "/Views/MasterView.cshtml";
 }
@@ -17,8 +17,8 @@
         <input name="firstName" placeholder="Укажите имя" class="textbox" required />
         <input name="LastName" placeholder="Укажите Фамилию" class="textbox" required />
         <input name="Parcicle" placeholder="Укажите Отчество" class="textbox" required />
-        <input name="DateBith" placeholder="Укажите Дату рождения" class="textbox" required />
-        <input name="DateDead" placeholder="Укажите Дату смерти" class="textbox" required />
+        <input name="DateBith" placeholder="Укажите Дату рождения" class="textbox" type="date" required />
+        <input name="DateDead" placeholder="Укажите Дату смерти" class="textbox" type="date" required />
         <input name="NumUch" placeholder="Укажите Номер участка" class="textbox" required />
         <input name="NumMog" placeholder="Укажите Номер могилы" class="textbox" required />
         <input name="Opis" placeholder="Укажите Описание" class="textbox" required />
@@ -43,25 +43,40 @@
                 <th>Дата смерти</th>
                 <th>Номер участка</th>
                 <th>Номер могилы</th>
-                <th>Описание</th>
-                <th>Категория</th>
+                @*<th>Описание</th>
+                <th>Категория</th>*@
             </tr>
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        <img class="imgsize" src="@item.Фотография" />
-                    </td>
-                    <td>@item.Фамилия</td>
-                    <td>@item.Имя</td>
-                    <td>@item.Отчество</td>
-                    <td>@item.Дата_рождения</td>
-                    <td>@item.Дата_смерти</td>
-                    <td>@item.Номер_участка</td>
-                    <td>@item.Номер_могилы</td>
-                    <td>@item.Описание</td>
-                    <td>@item.Категория</td>
-                </tr>
+            <tr>
+                <td>
+                    <img class="imgsize" src="@item.Photo" />
+                </td>
+                <td>@item.LName</td>
+                <td>@item.FName</td>
+                <td>@item.SName</td>
+                <td>@item.DOB</td>
+                <td>@item.DateDeath</td>
+                @if (item.BurialPlace != null)
+                {
+                    <td>@item.BurialPlace.NArea</td>
+                    <td>@item.BurialPlace.NBurial</td>
+                }
+                else
+                {
+                    <td>Нет данных</td>
+                    <td>Нет данных</td>
+                }
+                @*<td>@item.Описание</td>*@
+                @if (item.Category != null)
+                {
+                    <td>@item.Category.CategoryName</td>
+                }
+                else
+                {
+                    <td>Нет данных</td>
+                }
+            </tr>
             }
         </table>
     </div>
