--- a/WebApplication9/Views/Home/Search.cshtml
+++ b/WebApplication9/Views/Home/Search.cshtml
@@ -1,69 +1,85 @@
-﻿@model IEnumerable<WebApplication9.Models.Man>
-    @{
+﻿@model IEnumerable<WebApplication9.Models.Deceased>
+@{
     Layout = "/Views/MasterView.cshtml";
-    }
-    <div class="form23">
-        @using (Html.BeginForm("Find", "Home", FormMethod.Get))
-        {
+}
+<div class="form23">
+    @using (Html.BeginForm("Find", "Home", FormMethod.Get))
+    {
         <input class="textbox23" type="text" name="findtext" />
         //@Html.TextBox("findtext");
         <input class="button23" type="submit" value="Найти" />
-        }
-    </div>
+    }
+</div>
 
-    <div class=" form">
-        @using (Html.BeginForm("Form", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-        <input name="firstName" placeholder="Укажите имя" class="textbox" required />
-        <input name="LastName" placeholder="Укажите Фамилию" class="textbox" required />
-        <input name="Parcicle" placeholder="Укажите Отчество" class="textbox" required />
-        <input name="DateBith" placeholder="Укажите Дату рождения" class="textbox" required />
-        <input name="DateDead" placeholder="Укажите Дату смерти" class="textbox" required />
-        <input name="NumUch" placeholder="Укажите Номер участка" class="textbox" required />
-        <input name="NumMog" placeholder="Укажите Номер могилы" class="textbox" required />
-        <input name="Opis" placeholder="Укажите Описание" class="textbox" required />
-        <input name="category" placeholder="Укажите Категорию" class="textbox" required />
+<div class=" form">
+    @using (Html.BeginForm("Form", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        <input name="firstName" placeholder="Укажите имя" class="textbox" type="text" required />
+        <input name="LastName" placeholder="Укажите Фамилию" class="textbox" type="text" required />
+        <input name="Parcicle" placeholder="Укажите Отчество" class="textbox" type="text" required />
+        <input name="DateBith" placeholder="Укажите Дату рождения" class="textbox" type="date" />
+        <input name="DateDead" placeholder="Укажите Дату смерти" class="textbox" type="date" />
+        <input name="NumUch" placeholder="Укажите Номер участка" class="textbox" type="number" />
+        <input name="NumMog" placeholder="Укажите Номер могилы" class="textbox" type="number" />
+        <input name="Opis" placeholder="Укажите Описание" class="textbox" />
+        <input name="category" placeholder="Укажите Категорию" class="textbox" type="text" />
         <br />
         <input type="file" name="upload" /><br>
         <input class="button" type="submit" value="Добавить" />
-        }
-    </div>
+    }
+</div>
 
 
-    <aside>
-        <div class="free-course free-course-aside side-widget">
+<aside>
+    <div class="free-course free-course-aside side-widget">
 
-            <table>
-                <tr>
-                    <th>Фотография</th>
-                    <th>Фамилия</th>
-                    <th>Имя</th>
-                    <th>Отчетсво</th>
-                    <th>Дата рождения</th>
-                    <th>Дата смерти</th>
-                    <th>Номер участка</th>
-                    <th>Номер могилы</th>
-                    <th>Описание</th>
-                    <th>Категория</th>
-                </tr>
-                @foreach (var item in Model)
-                {
+        <table>
+            <tr>
+                <th>Фотография</th>
+                <th>Фамилия</th>
+                <th>Имя</th>
+                <th>Отчество</th>
+                <th>Дата рождения</th>
+                <th>Дата смерти</th>
+                <th>Номер участка</th>
+                <th>Номер могилы</th>
+                <th>Описание</th>
+                <th>Категория</th>
+            </tr>
+            @foreach (var item in Model)
+            {
                 <tr>
                     <td>
-                        <img class="imgsize" src="@item.Фотография" />
+                        <img class="imgsize" src="@item.Photo" />
                     </td>
-                    <td>@item.Фамилия</td>
-                    <td>@item.Имя</td>
-                    <td>@item.Отчество</td>
-                    <td>@item.Дата_рождения</td>
-                    <td>@item.Дата_смерти</td>
-                    <td>@item.Номер_участка</td>
-                    <td>@item.Номер_могилы</td>
-                    <td>@item.Описание</td>
-                    <td>@item.Категория</td>
+                    <td>@item.LName</td>
+                    <td>@item.FName</td>
+                    <td>@item.SName</td>
+                    <td>@item.DOB</td>
+                    <td>@item.DateDeath</td>
+                    @if (item.BurialPlace != null)
+                    {
+                        <td>@item.BurialPlace.NArea</td>
+                        <td>@item.BurialPlace.NBurial</td>
+                    }
+                    else
+                    {
+                        <td>Нет данных</td>
+                        <td>Нет данных</td>
+                    }
+                    <td>@item.Description</td>
+                    @if (item.Category != null)
+                    {
+                        <td>@item.Category.CategoryName</td>
+                    }
+                    else
+                    {
+                        <td>Нет данных</td>
+                    }
+
                 </tr>
-                }
-            </table>
-        </div>
-    </aside>
+            }
+        </table>
+    </div>
+</aside>
 
