Почти полностью переписана визуальная структура

--- a/WebApplication9/Views/Home/Search.cshtml
+++ b/WebApplication9/Views/Home/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication9.Models.Deceased>
+﻿@model IEnumerable<Cemetery.Models.Deceased>
 @{
     Layout = "/Views/MasterView.cshtml";
 }
@@ -11,75 +11,79 @@
     }
 </div>
 
-<div class=" form">
-    @using (Html.BeginForm("Form", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@if (User.Identity.IsAuthenticated)
     {
-        <input name="firstName" placeholder="Укажите имя" class="textbox" type="text" required />
-        <input name="LastName" placeholder="Укажите Фамилию" class="textbox" type="text" required />
-        <input name="Parcicle" placeholder="Укажите Отчество" class="textbox" type="text" required />
-        <input name="DateBith" placeholder="Укажите Дату рождения" class="textbox" type="date" />
-        <input name="DateDead" placeholder="Укажите Дату смерти" class="textbox" type="date" />
-        <input name="NumUch" placeholder="Укажите Номер участка" class="textbox" type="number" />
-        <input name="NumMog" placeholder="Укажите Номер могилы" class="textbox" type="number" />
-        <input name="Opis" placeholder="Укажите Описание" class="textbox" />
-        <input name="category" placeholder="Укажите Категорию" class="textbox" type="text" />
-        <br />
-        <input type="file" name="upload" /><br>
-        <input class="button" type="submit" value="Добавить" />
-    }
-</div>
-
-
-<aside>
-    <div class="free-course free-course-aside side-widget">
-
-        <table>
-            <tr>
-                <th>Фотография</th>
-                <th>Фамилия</th>
-                <th>Имя</th>
-                <th>Отчество</th>
-                <th>Дата рождения</th>
-                <th>Дата смерти</th>
-                <th>Номер участка</th>
-                <th>Номер могилы</th>
-                <th>Описание</th>
-                <th>Категория</th>
-            </tr>
-            @foreach (var item in Model)
+        <div class=" form">
+            @using (Html.BeginForm("Form", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
-                <tr>
-                    <td>
-                        <img class="imgsize" src="@item.Photo" />
-                    </td>
-                    <td>@item.LName</td>
-                    <td>@item.FName</td>
-                    <td>@item.SName</td>
-                    <td>@item.DOB</td>
-                    <td>@item.DateDeath</td>
-                    @if (item.BurialPlace != null)
-                    {
-                        <td>@item.BurialPlace.NArea</td>
-                        <td>@item.BurialPlace.NBurial</td>
-                    }
-                    else
-                    {
-                        <td>Нет данных</td>
-                        <td>Нет данных</td>
-                    }
-                    <td>@item.Description</td>
-                    @if (item.Category != null)
-                    {
-                        <td>@item.Category.CategoryName</td>
-                    }
-                    else
-                    {
-                        <td>Нет данных</td>
-                    }
-
-                </tr>
+                <input name="firstName" placeholder="Укажите имя" class="textbox" type="text" required />
+                <input name="LastName" placeholder="Укажите Фамилию" class="textbox" type="text" required />
+                <input name="Parcicle" placeholder="Укажите Отчество" class="textbox" type="text" required />
+                <input name="DateBith" placeholder="Укажите Дату рождения" class="textbox" type="date" />
+                <input name="DateDead" placeholder="Укажите Дату смерти" class="textbox" type="date" />
+                <input name="NumUch" placeholder="Укажите Номер участка" class="textbox" type="number" />
+                <input name="NumMog" placeholder="Укажите Номер могилы" class="textbox" type="number" />
+                <input name="Opis" placeholder="Укажите Описание" class="textbox" />
+                <input name="category" placeholder="Укажите Категорию" class="textbox" type="text" />
+                <br />
+                <input type="file" name="upload" /><br>
+                <input class="button" type="submit" value="Добавить" />
             }
-        </table>
-    </div>
-</aside>
+        </div>
+    }
+    else
+    {
+        <div>
+
+        </div>
+    }
+
+
+<table>
+    <tr>
+        <th>Фотография</th>
+        <th>Фамилия</th>
+        <th>Имя</th>
+        <th>Отчество</th>
+        <th>Дата рождения</th>
+        <th>Дата смерти</th>
+        <th>Номер участка</th>
+        <th>Номер могилы</th>
+        <th>Описание</th>
+        <th>Категория</th>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                <img class="imgsize" src="@item.Photo" />
+            </td>
+            <td>@item.LName</td>
+            <td>@item.FName</td>
+            <td>@item.SName</td>
+            <td>@item.DOB</td>
+            <td>@item.DateDeath</td>
+            @if (item.BurialPlace != null)
+            {
+                <td>@item.BurialPlace.NArea</td>
+                <td>@item.BurialPlace.NBurial</td>
+            }
+            else
+            {
+                <td>Нет данных</td>
+                <td>Нет данных</td>
+            }
+            <td>@item.Description</td>
+            @if (item.Category != null)
+            {
+                <td>@item.Category.CategoryName</td>
+            }
+            else
+            {
+                <td>Нет данных</td>
+            }
+
+        </tr>
+    }
+</table>
 
