--- a/WebApplication9/Views/Home/Find.cshtml
+++ b/WebApplication9/Views/Home/Find.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication9.Models.Deceased>
+﻿@model IEnumerable<Cemetery.Models.Deceased>
 @{
     Layout = "/Views/MasterView.cshtml";
 }
