--- a/WebApplication9/Views/Home/Index.cshtml
+++ b/WebApplication9/Views/Home/Index.cshtml
@@ -1,103 +1,76 @@
 ﻿@{
     Layout = "/Views/MasterView.cshtml";
 }
-<div class="full-post">
-    <br />
-    <br />
-    <h4>Центральный вход в "некрополь"</h4>
-    <a href=""><img src="~/Content/images/1_1.jpg" class="post-thumb img-responsive" alt="" /></a>
-    <div class="post-meta">
-    </div>
-    <h4>Известные захоронения</h4>
-    <p></p>
+
+<div class="Burial">
+    <img class="BurialPhotoHead" src="~/Content/images/1_1.jpg" alt="" />
+    <h2 class="BurialDescript">Центральный вход в "некрополь"</h2>
 </div>
-<div class="half-post">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="~/Content/images/home/1/2.jpg" class="post-thumb img-responsive" alt="" />
+<h2>Известные захоронения</h2>
+
+<div>
+
+    <div class="Samples-Burials">
+        <div class="Burial">
+            <div class="BurialDescript">
+                <h4> Могила академика Н. И. Вавилова</h4>
+                На мемориальном комплексе похоронен известный русский писатель, литературный критик, философ Николай Гаврилович Чернышевский, а также члены его семьи. На некрополе покоится супруга поэта, писателя и публициста Николая Алексеевича Некрасова — Зинаида Некрасова. На погосте находится могила легендарного советского ученого, академика Николая Ивановича Вавилова.</></p>
+            </div>
+            <img class="BurialPhoto" src="~/Content/images/home/1/2.jpg" alt="" />
         </div>
-        <div class="col-md-6">
-            <h4>Могила академика Н. И. Вавилова</h4>
-            <br />
-            <p><h5>>На мемориальном комплексе похоронен известный русский писатель, литературный критик, философ Николай Гаврилович Чернышевский, а также члены его семьи. На некрополе покоится супруга поэта, писателя и публициста Николая Алексеевича Некрасова — Зинаида Некрасова. На погосте находится могила легендарного советского ученого, академика Николая Ивановича Вавилова.</h5></p>
+
+
+        <div class="Burial">
+            <img class="BurialPhoto" src="~/Content/images/home/1/3.jpg" alt="" />
+            <div class="BurialDescript">
+                <h4>Жертвы политических репрессий</h4>
+                На некрополе установлен мемориал в память о жертвах политических репрессий, погибших на территории Саратова и Саратовской области.</h5></span>
+            </div>
         </div>
+
+
+
+        <div class="Burial">
+            <img class="BurialPhoto" src="~/Content/images/home/1/4.jpg" alt="" />
+            <div class="BurialDescript">
+                <h4>Братская могила</h4>
+                На некрополе в братской могиле похоронены солдаты, умершие от ран в годы Великой Отечественной войны в госпиталях Саратова. На погосте покоятся участники войны, удостоенные званий Героев Советского Союза. В память о военнослужащих на кладбище установлен мемориал, представляющий собой скульптуру воина-освободителя.</h5>
+            </div>
+        </div>
+
     </div>
-</div>
-<div class="half-post">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="~/Content/images/home/1/3.jpg" class="post-thumb img-responsive" alt="" />
-        </div>
-        <div class="col-md-6">
-            <h4>Жертвы политических репрессий</h4>
-            <br />
-            <h5>На некрополе установлен мемориал в память о жертвах политических репрессий, погибших на территории Саратова и Саратовской области.</h5></span>
-        </div>
+
+
+    <div class="PhotoGalery">
+        <h3>Фотогалерия</h3>
+        <ul>
+            <li>
+                <img width="200" height="225" src="~/Content/images/Photo2/1.jpg" />
+            </li>
+            <li>
+                <img width="200" height="225" src="~/Content/images/Photo2/2.jpg" />
+            </li>
+            <li>
+                <img width="200" height="225" src="~/Content/images/Photo2/3.jpg" />
+            </li>
+            <li>
+                <img width="200" height="225" src="~/Content/images/Photo2/4.jpg" />
+            </li>
+            <li>
+                <img width="200" height="225" src="~/Content/images/Photo2/5.jpg" />
+            </li>
+        </ul>
     </div>
-</div>
-<div class="half-post">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="~/Content/images/home/1/4.jpg" class="post-thumb img-responsive" alt="" />
-        </div>
-        <div class="col-md-6">
-            <h4>Братская могила</h4>
-            <br />
-            <h5>На некрополе в братской могиле похоронены солдаты, умершие от ран в годы Великой Отечественной войны в госпиталях Саратова. На погосте покоятся участники войны, удостоенные званий Героев Советского Союза. В память о военнослужащих на кладбище установлен мемориал, представляющий собой скульптуру воина-освободителя.</h5>
-        </div>
-    </div>
+
 </div>
 
-<div class="sep">
-    
-</div>
 
-    <div class="free-course free-course-aside side-widget">
-        <h3>Может быть инетерсно <img src="~/Content/images/lampochka.png" class="box5" /></h3>
+@*<div class="free-course free-course-aside side-widget">
+        <h3>Может быть интерсно <img src="~/Content/images/lampochka.png" class="box5" /></h3>
         <div class="text23">
             <h>
                 Воскресенское кладбище — старейший действующий некрополь Саратова. Погост располагается в Кировском районе города. Кладбище отсчитывает свою историю с 1837 года. Общая площадь, занимаемая некрополем, составляет 56,9 га. Здесь насчитывается порядка 350 тысяч захоронений. В середине XIX в. на территории кладбища был возведен храм Воскресения Христова, но в 1930 году церковь подверглась разрушению.
                 На некрополе в братской могиле похоронены солдаты, умершие от ран в годы Великой Отечественной войны в госпиталях Саратова. На погосте покоятся участники войны, удостоенные званий Героев Советского Союза. В память о военнослужащих на кладбище установлен мемориал, представляющий собой скульптуру воина-освободителя.
             </h>
         </div>
-    </div>
-
-           </div>
-           </div>
-<style>
-    img.zoom {
-        cursor: pointer;
-        max-width: 150px;
-    }
-
-        img.zoom:hover {
-            max-width: none;
-        }
-</style>
-<div class="recent-posts side-widget">
-    <h3>Фотогалерия</h3>
-    <ul>
-        <li>
-            <img width="300" height="225" src="~/Content/images/Photo2/1.jpg" />
-        </li>
-        <li>
-            <img width="300" height="225" src="~/Content/images/Photo2/2.jpg" />
-        </li>
-        <li>
-            <img width="300" height="225" src="~/Content/images/Photo2/3.jpg" />
-        </li>
-        <li>
-            <img width="300" height="225" src="~/Content/images/Photo2/4.jpg" />
-        </li>
-        <li>
-            <img width="300" height="225" src="~/Content/images/Photo2/5.jpg" />
-        </li>
-        <li>
-            <br />
-            <br />
-            <br />
-
-        </li>
-    </ul>
-</div>
-
+    </div>*@
